@@ -1,3 +1,8 @@
+2003-01-30  Ryan T. Sammartino  <ryants@shaw.ca>
+
+	* www/my/index.php: use $HTML->imgroot to get current theme's
+	icons.
+
 2003-01-29  Ryan T. Sammartino  <ryants@shaw.ca>
 
 	* common/docman/DocumentFactory.class: fix syntax error.
